# claude-code-proxy

./: .gitignore  AGENTS.md  README.md  cdk.json  pyproject.toml
alembic/versions/: 20260329_000001_initial_schema.py
api/: __init__.py  admin_auth.py  admin_budget_policies.py  admin_model_mappings.py  admin_usage.py  admin_users.py  admin_virtual_keys.py  app.py  dependencies.py  errors.py  health_router.py  internal_ops.py  observability.py  proxy_router.py
infra/: __init__.py  app.py  config.py  stack.py
infra/aspects/: __init__.py  security_guards.py
infra/constructs/: __init__.py  admin_api_construct.py  common.py  data_plane_construct.py  network_construct.py  proxy_runtime_construct.py  token_service_construct.py
infra/postgres/: __init__.py  schema.py
models/: __init__.py  context.py  domain.py  errors.py
proxy/: __init__.py  audit_logger.py  auth.py  context.py  model_resolver.py  policy_engine.py  quota_engine.py  rate_limiter.py
proxy/bedrock_converse/: __init__.py  request_builder.py  response_parser.py  stream_decoder.py
repositories/: __init__.py  admin_identity_repository.py  model_alias_repository.py  model_route_repository.py  policy_repository.py  pricing_repository.py  usage_repository.py  user_repository.py  virtual_key_repository.py
scripts/: __init__.py  apiKeyHelper  api_key_helper.py  api_key_helper.sh  deploy_claude_code_proxy.sh
security/: __init__.py  encryption.py  keys.py
tests/: __init__.py  conftest.py
tests/admin/: support.py  (+7 more)
token_service/: __init__.py  handler.py  identity.py  issue_service.py
(+82 files in other folders)
