[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-code-proxy"
version = "0.1.0"
description = "Claude Code Proxy reference implementation"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.39,<2.0",
    "fastapi>=0.115,<1.0",
    "psycopg[binary]>=3.2,<4.0",
]

[project.optional-dependencies]
dev = [
    "alembic>=1.16,<2.0",
    "httpx>=0.27,<1.0",
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "testcontainers>=4.8,<5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools]
packages = [
    "api",
    "infra",
    "infra.postgres",
    "models",
    "proxy",
    "proxy.bedrock_converse",
    "repositories",
    "security",
    "token_service",
]
